# self_driving_turtlebot3

./: .gitignore  README.md  package.xml
for_apriltag_ros/: README_apriltag_ros.md  continuous_detection.launch
for_apriltag_ros/config/: settings.yaml  tags.yaml
launch/: april_tag_tracking.launch  line_following_simulation.launch  multi.launch  obstacle_avoidance.launch  obstacle_avoidance_real.launch  stop_sign_detection.launch  task2_real.launch  task2_simulation.launch  task3_simulation.launch  tb3_leader_teleop.launch  turtlebot3_autonomy_final.launch  turtlebot3_autonomy_final_real.launch  turtlebot3_autonomy_final_simulation.launch  turtlebot3_world.launch
maps/: map.pgm
models/Apriltag36_11_00000/materials/scripts/: Apriltag36_11_00000.material
scripts/: ODG_PF.py  april_tag_tracking_sim.py  apriltag_detection.py  apriltag_detection_real.py  detect.py  line_detection.py  line_detection_lab.py  line_detection_lab_switch.py  line_detection_real.py  line_following_simulation.py  main_controller.py  main_controller_real.py  move_TurtleBot3.py  move_turtlebot3.py  obstacle_avoidance.py  obstacle_avoidance_real.py  pid_controller.py  stop_sign_classifier.xml  stop_sign_detection.py  stop_sign_detection_cv.py  stop_sign_detection_cv_real.py  stop_sign_detection_yolo.py  task2_main_controller.py  task2_main_controller_real.py
scripts/line_follow/: line_following_simulation.py
scripts/yolov3/yolov3_tf2/: dataset.py  models.py
urdf/: turtlebot3_burger_leader.gazebo.xacro  turtlebot3_burger_leader.urdf.xacro
worlds/: turtlebot3_final.world
